syntax = "proto3";

package robot;

service RobotService {
    // This is just a dummy example for me to learn tonic, we will modify it later

    rpc Ping(PingRequest) returns (PingResponse);

    // Next: 
    // rpc SetMotorSpeed(MotorControl) returns (ControlResponse);
}

message PingRequest {
    string message = 1;
    int64 client_timestamp = 2;
}

message PingResponse {
    string message = 1;
    int64 client_timestamp = 2;
    int64 server_timestamp = 3;
    string server_id =4;
}


